# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt
GameEngineCore/: CMakeLists.txt  OpenGLgameCore.vcxproj.filters  cmake_install.cmake
GameEngineCore/OpenGLgameCore.dir/Debug/: OpenGLgameCore.lib.recipe
GameEngineCore/OpenGLgameCore.dir/Debug/OpenGLgameCore.tlog/: CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  OpenGLgameCore.lastbuildstate
GameEngineCore/includes/GameEngineCore/: Application.hpp  Camera.hpp  Event.hpp  Input.hpp  Keys.hpp  Log.hpp
GameEngineCore/src/GameEngineCore/: Application.cpp  Camera.cpp  Input.cpp  Window.cpp  Window.hpp
GameEngineCore/src/GameEngineCore/Modules/: UIModule.cpp  UIModule.hpp
GameEngineCore/src/GameEngineCore/Rendering/OpenGL/: IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Mesh.hpp  Renderer_OpenGL.cpp  Renderer_OpenGL.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
GameEngineEditor/: CMakeLists.txt  OpenGLgameEditor.vcxproj.filters  cmake_install.cmake
GameEngineEditor/OpenGLgameEditor.dir/Debug/: OpenGLgameEditor.ilk
GameEngineEditor/OpenGLgameEditor.dir/Debug/OpenGLgameEditor.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog
GameEngineEditor/src/: main.cpp
OpenGLgameCore/: CMakeLists.txt  OpenGLgameCore.vcxproj
OpenGLgameCore/Debug/: OpenGLgameCore.lib
OpenGLgameCore/OpenGLgameCore.dir/Debug/OpenGLgameCore.tlog/: CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
OpenGLgameCore/includes/OpenGLgameCore/: Application.hpp  Camera.hpp  Event.hpp  Input.hpp  Keys.hpp  Log.hpp
OpenGLgameCore/src/OpenGLgameCore/: Application.cpp  Camera.cpp  Input.cpp  Window.cpp  Window.hpp
OpenGLgameCore/src/OpenGLgameCore/Modules/: UIModule.cpp
OpenGLgameCore/src/OpenGLgameCore/Rendering/OpenGL/: IndexBuffer.cpp  Renderer_OpenGL.cpp  Renderer_OpenGL.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
OpenGLgameEditor/: CMakeLists.txt  OpenGLgameEditor.vcxproj
OpenGLgameEditor/OpenGLgameEditor.dir/Debug/OpenGLgameEditor.tlog/: CL.read.1.tlog  CustomBuild.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGLgameEditor/src/: main.cpp
